--- a/src/app/main/news/news.page.html
+++ b/src/app/main/news/news.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="primary" class="header-border">
     <ion-title>News</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -33,7 +33,7 @@
               color="primary" 
               [routerLink]="['/', 'main', 'tabs', 'news', singleNews.id]"
               routerDirection="forward">
-              SHOW MORE
+              READ
             </ion-button>
           </div>
 
