--- a/src/app/main/events/event-detail/event-detail.page.html
+++ b/src/app/main/events/event-detail/event-detail.page.html
@@ -21,7 +21,7 @@
 
             <ion-row>
               <ion-col size="" class="ion-text-center">
-                <ion-card-subtitle class="ion-padding">{{ loadedEvent.date | date:'dd/MMM/yyyy - hh:mm:a'}}</ion-card-subtitle>
+                <ion-card-subtitle class="ion-padding">{{ loadedEvent.date | date:'dd/MMM/yyyy - hh:mm a'}}</ion-card-subtitle>
               </ion-col>
             </ion-row>
 
