--- a/src/app/main/events/events.page.html
+++ b/src/app/main/events/events.page.html
@@ -25,7 +25,7 @@
                 The ion-segment has also a value property which will indicate which menu will be active by default
                 The component also implements an ionic-native-event (ionChange) that handles the change and passes an event through
               -->
-        <ion-segment value="upcomingEvents" (ionChange)="onFilterUpdate($event)" background="primary">
+        <ion-segment value="upcomingEvents" (ionChange)="onFilterUpdate($event)" background="primary" mode="ios">
           <ion-segment-button value="upcomingEvents">Upcoming Events</ion-segment-button>
           <ion-segment-button value="pastEvents">Past Events</ion-segment-button>
         </ion-segment>
@@ -40,7 +40,7 @@
         <ion-card id="news-card">
           <ion-card-header>
             <ion-card-title>{{ event.title }}</ion-card-title>
-            <ion-card-subtitle class="ion-margin-top">{{ event.date | date:'dd/MMM/yyyy - hh:mm:a' }}</ion-card-subtitle>
+            <ion-card-subtitle class="ion-margin-top">{{ event.date | date:'dd/MMM/yyyy - hh:mm a' }}</ion-card-subtitle>
             <ion-card-subtitle>{{ event.address }}</ion-card-subtitle>
           </ion-card-header>
           <ion-card-content>
