--- a/src/app/main/events/events.page.scss
+++ b/src/app/main/events/events.page.scss
@@ -1,5 +1,6 @@
 ion-segment{
     --background: var(--ion-color-primary);
+    
     margin-top: 4%;
-    margin-bottom: -4%;
+    // margin-bottom: -4%;
 }
