--- a/src/app/main/news/news.page.html
+++ b/src/app/main/news/news.page.html
@@ -14,14 +14,22 @@
     </ion-toolbar>
   </ion-header> -->
 
-  <ion-grid class="ion-no-padding">
+  <!-- If there is no news -->
+  <div *ngIf="loadedNews?.length == 0" class="ion-text-center ion-padding">
+    <p>There is no news posted here yet...</p>
+    <p>Please come back later.</p>
+  </div>
+  
+
+  <!-- If there is any news -->
+  <ion-grid *ngIf="loadedNews" class="ion-no-padding">
     
     <ion-row *ngFor="let singleNews of loadedNews">
       <ion-col size="12" class="">
         
         <ion-card id="news-card">
           <ion-card-header>
-            <ion-card-subtitle>{{ singleNews.author}} - {{ singleNews.date }}</ion-card-subtitle>
+            <ion-card-subtitle>{{ singleNews.member_id}} - {{ singleNews.created_at }}</ion-card-subtitle>
             <ion-card-title>{{ singleNews.title }}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
