api integration with event

--- a/src/app/main/news/news.page.html
+++ b/src/app/main/news/news.page.html
@@ -29,7 +29,8 @@
         
         <ion-card id="news-card">
           <ion-card-header>
-            <ion-card-subtitle>{{ singleNews.publisher_first_name}} {{singleNews.publisher_last_name}} - {{ singleNews.created_at | date:'dd/MMM/yyyy - hh:mm a' }}</ion-card-subtitle>
+            <ion-card-subtitle>{{ singleNews.publisher_first_name}} {{singleNews.publisher_last_name}}</ion-card-subtitle>
+            <ion-card-subtitle class="ion-padding-bottom">{{ singleNews.created_at | date:'dd/MMM/yyyy - hh:mm a' }}</ion-card-subtitle>
             <ion-card-title>{{ singleNews.title }}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
