--- a/src/app/main/news/news-detail/news-detail.page.html
+++ b/src/app/main/news/news-detail/news-detail.page.html
@@ -17,7 +17,7 @@
       <ion-col size="12">
         <ion-card class="ion-no-border ion-no-margin ion-no-padding">
           <ion-card-header color="primary" class="header-border">
-            <ion-card-title class="ion-text-center">{{ loadedNews.title }}</ion-card-title>
+            <ion-card-title class="ion-text-center ion-padding-bottom">{{ loadedNews.title }}</ion-card-title>
             
             <ion-row class="">
               <ion-col size="" class="">
