add app restrictions and authentication messages

--- a/src/app/main/events/event-detail/event-detail.page.html
+++ b/src/app/main/events/event-detail/event-detail.page.html
@@ -47,9 +47,9 @@
           </ion-card-content>
 
           <!-- If it is not a past event, show RSVP button -->
-          <p *ngIf="!isPastEvent">
+          <!-- <p *ngIf="!isPastEvent">
             Not past event
-          </p>
+          </p> -->
 
 
           <div *ngIf="!isPastEvent" >
