--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,10 +1,19 @@
 <ion-header>
-  <ion-toolbar color="primary" class="header-border">
+  <!-- <ion-toolbar color="primary" class="header-border">
     <ion-title>{{isLoginMode ? 'LOGIN' : 'SIGN UP'}}</ion-title>
-  </ion-toolbar>
+  </ion-toolbar> -->
+  
 </ion-header>
 
-<ion-content class="" >
+<ion-content color="primary" >
+
+  <ion-grid>
+    <ion-row>
+      <ion-col class="ion-text-center ion-margin-top">
+        <img src="../../assets/moa_logo_500px.png" alt="Moke Owners Association Victoria" width="50%" id="moa-logo">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
 
@@ -16,7 +25,7 @@
           <ion-col>
             
             <ion-item>
-              <ion-label position="floating">Membership Number</ion-label>
+              <ion-label position="floating" color="tertiary">Membership Number</ion-label>
               <ion-input type="text"
                 ngModel 
                 name="membershipNumber"
@@ -90,7 +99,7 @@
         <ion-col size="">
           
             
-          <ion-item>
+          <ion-item >
             <ion-label position="floating">E-mail</ion-label>
             <ion-input type="email"
               ngModel
