--- a/src/app/auth/auth.page.scss
+++ b/src/app/auth/auth.page.scss
@@ -1,17 +1,45 @@
-#login-button{
-    margin-top: 0.3em;
+#login-button {
+  margin-top: 0.3em;
 }
 
-#switch-button{
-    margin-top: 1em;
+#switch-button {
+  margin-top: 1em;
 }
 
 // .ion-invalid.ion-touched ion-label{
 //     color: var(--ion-color-danger);
 // }
 
-.invalid-feedback{
-    color: var(--ion-color-danger);
-    font-size: smaller;
-    font-style: italic;
+.invalid-feedback {
+  color: var(--ion-color-danger) !important;
+  font-size: smaller;
+  font-style: italic;
+}
+
+ion-item {
+  --ion-background-color: var(--ion-color-primary);
+  //   --background-activated-opacity: 50%;
+  --border-color: var(--ion-color-tertiary);
+  --border-radius: 20px;
+  --border-style: solid;
+  // --border-width: 1px;
+}
+
+ion-label {
+  color: white !important;
+  font-weight: 800 !important;
+}
+
+ion-input {
+  color: var(--ion-color-tertiary);
+  font-weight: 600;
+}
+
+ion-toolbar {
+  --border-style: none;
+  --border-width: 0px;
+}
+
+#moa-logo {
+  margin-top: 10%;
 }
