--- a/src/app/main/news/news.page.scss
+++ b/src/app/main/news/news.page.scss
@@ -1,5 +1,23 @@
-// #news-card{
-//     border: solid 1px;
-//     border-color: ;
+// #news-card {
+//   border: solid 1px;
+//   border-color: red;
 // }
 
+.skeleton-first-sub {
+  width: 100px;
+  height: 10px;
+}
+
+.skeleton-second-sub {
+  width: 150px;
+  height: 10px;
+}
+
+.skeleton-title {
+  width: 150px;
+  height: 20px;
+}
+
+.skeleton-content {
+  height: 130px;
+}
