--- a/src/app/main/events/events.page.html
+++ b/src/app/main/events/events.page.html
@@ -33,12 +33,80 @@
       </ion-col>
     </ion-row>
 
-
+    <!-- If there is no event published -->
     <ion-row *ngIf="!loadedEvents">
       <ion-col size="" class="ion-text-center">
         <p>No events have been published yet, please come back latter.</p>
       </ion-col>
     </ion-row>
+    <!-- End of no event published -->
+
+
+    <!-- Skeleton Loading -->
+    <ion-grid *ngIf="isLoading">
+      <ion-row>
+        <ion-col>
+          <ion-card>
+            
+            <ion-card-header>
+            
+              <ion-card-title class="ion-margin-bottom">
+                <ion-skeleton-text animated class="skeleton-title"></ion-skeleton-text>
+              </ion-card-title>
+              
+              <ion-card-subtitle>
+                <ion-skeleton-text animated class="skeleton-first-sub"></ion-skeleton-text>
+              </ion-card-subtitle>
+            
+              <ion-card-subtitle>
+                <ion-skeleton-text animated class="skeleton-second-sub"></ion-skeleton-text>
+              </ion-card-subtitle>
+            
+          
+            </ion-card-header>
+          
+            <ion-card-content>
+              <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+            </ion-card-content>
+
+          </ion-card>
+
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+
+          <ion-card>
+            
+            <ion-card-header>
+            
+              <ion-card-title class="ion-margin-bottom">
+                <ion-skeleton-text animated class="skeleton-title"></ion-skeleton-text>
+              </ion-card-title>
+              
+              <ion-card-subtitle>
+                <ion-skeleton-text animated class="skeleton-first-sub"></ion-skeleton-text>
+              </ion-card-subtitle>
+            
+              <ion-card-subtitle>
+                <ion-skeleton-text animated class="skeleton-second-sub"></ion-skeleton-text>
+              </ion-card-subtitle>
+            
+          
+            </ion-card-header>
+          
+            <ion-card-content>
+              <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+            </ion-card-content>
+
+          </ion-card>
+
+        </ion-col>
+      </ion-row>
+
+    </ion-grid>
+    <!-- End Skeleton Loading -->
 
 
     <ion-row *ngFor="let event of loadedEvents">
