--- a/src/app/main/events/events.page.scss
+++ b/src/app/main/events/events.page.scss
@@ -1,6 +1,25 @@
-ion-segment{
-    --background: var(--ion-color-primary);
-    
-    margin-top: 4%;
-    // margin-bottom: -4%;
+ion-segment {
+  --background: var(--ion-color-primary);
+
+  margin-top: 4%;
+  // margin-bottom: -4%;
+}
+
+.skeleton-first-sub {
+  width: 100px;
+  height: 10px;
+}
+
+.skeleton-second-sub {
+  width: 150px;
+  height: 10px;
+}
+
+.skeleton-title {
+  width: 69%;
+  height: 35px;
+}
+
+.skeleton-content {
+  height: 130px;
 }
