--- a/src/app/main/news/news.page.html
+++ b/src/app/main/news/news.page.html
@@ -14,6 +14,70 @@
     </ion-toolbar>
   </ion-header> -->
 
+  <!-- Skeleton Loading -->
+  <ion-grid *ngIf="isLoading">
+    <ion-row>
+      <ion-col>
+        <ion-card>
+          
+          <ion-card-header>
+          
+            <ion-card-subtitle>
+              <ion-skeleton-text animated class="skeleton-first-sub"></ion-skeleton-text>
+            </ion-card-subtitle>
+          
+            <ion-card-subtitle class="ion-padding-bottom">
+              <ion-skeleton-text animated class="skeleton-second-sub"></ion-skeleton-text>
+            </ion-card-subtitle>
+          
+            <ion-card-title>
+              <ion-skeleton-text animated class="skeleton-title"></ion-skeleton-text>
+            </ion-card-title>
+         
+          </ion-card-header>
+         
+          <ion-card-content>
+            <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+          </ion-card-content>
+
+        </ion-card>
+
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+
+        <ion-card>
+          
+          <ion-card-header>
+          
+            <ion-card-subtitle>
+              <ion-skeleton-text animated class="skeleton-first-sub"></ion-skeleton-text>
+            </ion-card-subtitle>
+          
+            <ion-card-subtitle class="ion-padding-bottom">
+              <ion-skeleton-text animated class="skeleton-second-sub"></ion-skeleton-text>
+            </ion-card-subtitle>
+          
+            <ion-card-title>
+              <ion-skeleton-text animated class="skeleton-title"></ion-skeleton-text>
+            </ion-card-title>
+         
+          </ion-card-header>
+         
+          <ion-card-content>
+            <ion-skeleton-text animated class="skeleton-content"></ion-skeleton-text>
+          </ion-card-content>
+
+        </ion-card>
+
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
+  <!-- End Skeleton Loading -->
+
   <!-- If there is no news -->
   <div *ngIf="!loadedNews || loadedNews?.length == 0"  class="ion-text-center ion-padding">
     <p>There is no news posted here yet...</p>
