fix segment behaviour

--- a/src/app/main/events/event-detail/event-detail.page.html
+++ b/src/app/main/events/event-detail/event-detail.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
 
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/main/tabs/events"></ion-back-button>
+      <ion-back-button ></ion-back-button>
     </ion-buttons>
 
     <ion-title>Event</ion-title>
